--- a/Foodbox-Springboot-RestAPI-Angular/src/main/src/main/ui/src/app/login/login.component.html
+++ b/Foodbox-Springboot-RestAPI-Angular/src/main/src/main/ui/src/app/login/login.component.html
@@ -1,6 +1,6 @@
 <form #userLogin = "ngForm" (ngSubmit)="login()">
     <div class="form-group">
-      <label for="email">Email address</label>
+      <label for="email">Enter Email address</label>
       <input type="email" class="form-control" required [(ngModel)]="service.currentUser.email" name="email">
     </div>
     <div class="form-group">
